@@ -499,6 +499,9 @@ namespace OpenBabel
 
   unsigned int OBAtom::GetImplicitValence() const
   {
+    //Special case for [H] to avoid infite loop: SMARTS Match() <-> AssignSpinMultiplicity()
+    if(GetAtomicNum() == 1)
+      return 1;
     OBMol *mol = (OBMol*)((OBAtom*)this)->GetParent();
     if (mol && !mol->HasImplicitValencePerceived())
       atomtyper.AssignImplicitValence(*((OBMol*)((OBAtom*)this)->GetParent()));
